samples/_failures_safe/1761422167_ae78c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a92b131e.c: In function ‘main’:
./samples/SAFE/__tmp_a92b131e.c:168:9: error: expected expression at end of input
  168 |         input[len -
      |         ^~~~~
./samples/SAFE/__tmp_a92b131e.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a92b131e.c:168:9: error: expected declaration or statement at end of input
